[package]
name = "cucumber-async-test"
version = "0.1.0"
authors = ["Nicolas Bigaouette <nbigaouette@elementai.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tokio = { version = "0.2", default-features = false, features = ["macros", "time", "rt-threaded"] }
cucumber = { package = "cucumber_rust", git = "https://github.com/bbqsrc/cucumber-rust.git", rev = "9c2af38" }
